# project_x1

./: .gitignore  README.md  docker-compose.local.yml
backend/app/: alembic.ini  database.db  package-lock.json  prestart.py  prestart.sh  pyproject.toml  requirements.txt  run.py  run.sh
backend/app/alembic/: .env  env.py
backend/app/app/: backend_pre_start.py  initial_data.py  main.py
backend/app/app/api/: deps.py
backend/app/app/core/: auth.py  config.py  security.py
backend/app/app/crud/: __init__.py  base.py  crud_assigned_task.py  crud_certificate.py  crud_employment_level.py  crud_employment_type.py  crud_exemple.py  crud_experience.py  crud_faq.py  crud_file.py  crud_formation.py  crud_has_skill.py  crud_job.py  crud_job_application.py  crud_location.py  crud_message.py  crud_participant.py  crud_project.py  crud_project_document.py  crud_project_document_type.py  crud_role.py  crud_skill.py  crud_skill_type.py  crud_task.py  crud_task_status.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: __init__.py  assigned_task.py  certificate.py  employment_level.py  employment_type.py  exemple.py  experience.py  faq.py  file.py  formation.py  has_skill.py  job.py  job_application.py  location.py  message.py  participant.py  project.py  project_document.py  project_document_type.py  role.py  skill.py  skill_type.py  task.py  task_status.py  user.py
backend/app/app/schemas/: __init__.py  assigned_task.py  auth.py  certificate.py  employment_level.py  employment_type.py  exemple.py  experience.py  (+19 more)
(+94 files in other folders)
